# StatePattern

./: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  PausedState.h  PlayingState.h  README.md  StatePatternTest.cpp  StoppedState.h
